Fixed Vertical Alignment of Background

--- a/main.css
+++ b/main.css
@@ -228,12 +228,16 @@ input {
     position: absolute;
     height: 100%;
     width: 100%;
-    top: 31px;
+    top: 32px;
     background-color: lightgrey;
     z-index: -1;
     white-space: nowrap;
     overflow: hidden;
     border: 0;
+    overflow-x: scroll;
+}
+.background::-webkit-scrollbar {
+    width: 0 !important;
 }
 .stripe {
     border: 0;
